# cloudera-airflow-plugins

./: .gitignore  README.md  requirements_tox.txt  setup.cfg  tox.ini
cloudera/: __init__.py
cloudera/cdp/security/: cdp_security.py  token_cache.py
cloudera_airflow_provider/: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  README.md  pylintrc  requirements_tox.txt  setup.cfg  tox.ini
cloudera_airflow_provider/cloudera/: __init__.py
cloudera_airflow_provider/cloudera/airflow/providers/decorators/: cde.py
cloudera_airflow_provider/cloudera/airflow/providers/hooks/: __init__.py  cde.py  cde_hook.py  cdw.py  cdw_hook.py
cloudera_airflow_provider/cloudera/airflow/providers/model/: connection.py
cloudera_airflow_provider/cloudera/airflow/providers/operators/: cde.py  cde_operator.py  cdw.py  cdw_operator.py
cloudera_airflow_provider/cloudera/airflow/providers/sensors/: cdw.py  cdw_sensor.py
cloudera_airflow_provider/cloudera/cdp/airflow/: __init__.py
cloudera_airflow_provider/cloudera/cdp/airflow/hooks/: __init__.py  cde_hook.py  cdw_hook.py
cloudera_airflow_provider/cloudera/cdp/airflow/model/: connection.py
cloudera_airflow_provider/cloudera/cdp/airflow/operators/: cde_operator.py  cdw_operator.py
cloudera_airflow_provider/cloudera/cdp/airflow/sensors/: cdw_sensor.py
cloudera_airflow_provider/cloudera/cdp/model/: cde.py
cloudera_airflow_provider/cloudera/cdp/security/: __init__.py  cde_security.py  cdp_security.py  token_cache.py
cloudera_airflow_provider/cloudera/cdp/security/cdp_requests/: cdpcurl.py  cdpv1sign.py
cloudera_airflow_provider/tests/: README.md  test_cde_hook.py  test_cde_job_run_operator.py  test_cdw_hook.py  test_metastore_sensor.py  test_security.py  utils.py
cloudera_airflow_provider/tests/cloudera/airflow/: test_legacy_suffix_naming.py
cloudera_airflow_provider/tests/cloudera/airflow/providers/hooks/: test_cde_hook.py  test_cdw_hook.py
cloudera_airflow_provider/tests/cloudera/airflow/providers/operators/: test_cde_job_run_operator.py
cloudera_airflow_provider/tests/cloudera/airflow/providers/sensors/: test_metastore_sensor.py
cloudera_airflow_provider/tests/cloudera/cdp/airflow/: test_legacy_naming.py
cloudera_airflow_provider/tests/cloudera/cdp/security/: test_security.py
cloudera_airflow_provider/tests/providers/cloudera/: utils.py
cloudera_airflow_provider/tests/providers/cloudera/decorators/: test_cde.py
cloudera_airflow_provider/tests/providers/cloudera/hooks/: test_cde_hook.py  test_cdw_hook.py
cloudera_airflow_provider/tests/providers/cloudera/model/: test_connection.py
cloudera_airflow_provider/tests/providers/cloudera/operators/: test_cde_job_run_operator.py
cloudera_airflow_provider/tests/providers/cloudera/sensors/: test_metastore_sensor.py
docs/: cdw-operator-preconditions.md
docs/examples/: README.md  cde_operator_example.py  cde_taskflow_example.py  cdw_operator_example.py
(+2 files in other folders)
