[metadata]
name = cloudera-cde-sdk
version = 1.0.1
author= Cloudera
description= Cloudera CDE SDK


[options]
packages=find_namespace:
python_requires = >=3.6
install_requires=
  pure25519
  # Minimum crypto version for handling CVE-2020-36242
  cryptography>=3.3.2
  tenacity
  requests
  pathlib2

[options.packages.find]
include =
  cloudera*