[metadata]
name = cloudera-airflow-provider
version = 1.0.2
author= Cloudera
description= Cloudera CDP Airflow Plugins


[options]
packages=find:
python_requires = >=3.6
install_requires=
  apache-airflow
  pure25519
  # Minimum crypto version for handling CVE-2020-36242
  cryptography>=3.3.2
  tenacity
  requests
  pathlib2

[options.entry_points]
# Airflow 2 provider entrypoint
apache_airflow_provider=
  provider_info=cloudera:get_provider_info
