[metadata]
name = cloudera-airflow-provider
version = 2.1.2
author= Cloudera
description= Cloudera CDP Airflow Plugins

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires=
  apache-airflow
  apache-airflow-providers-apache-hive
  # Minimum crypto version for handling CVE-2020-36242
  cryptography>=3.3.2
  tenacity
  requests
  cloudera-cde-sdk>=1.0.1
  # setuptools requirements
  # more info: https://github.com/pypa/setuptools/issues/4483
  packaging>=24; python_version >= "3.8"
  ordered-set>=3.1.1; python_version >= "3.8"
  more_itertools>=8.8; python_version >= "3.8"
  importlib_resources>=5.10.2; python_version >= "3.8"
  importlib_metadata>=6; python_version >= "3.8"
  tomli>=2.0.1; python_version >= "3.8"
  wheel>=0.43.0; python_version >= "3.8"
  platformdirs >= 2.6.2; python_version >= "3.8"

[options.entry_points]
# Airflow 2 provider entrypoint
apache_airflow_provider=
  provider_info=cloudera.cdp.airflow:get_provider_info

[options.packages.find]
include =
  cloudera*

[isort]
line_length=110
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=airflow,tests
skip=build,.tox,venv
profile = black
