[metadata]
name = cloudera-airflow-provider
version = 2.1.4
author= Cloudera
description= Cloudera CDP Airflow Plugins

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires=
  apache-airflow
  apache-airflow-providers-apache-hive
  # Minimum crypto version for handling CVE-2020-36242
  cryptography>=3.3.2
  tenacity
  requests
  cloudera-cde-sdk>=1.0.2

[options.entry_points]
# Airflow 2 provider entrypoint
apache_airflow_provider=
  provider_info=cloudera.cdp.airflow:get_provider_info

[options.packages.find]
include =
  cloudera*

[isort]
line_length=110
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=airflow,cloudera,tests
skip=build,.tox,venv
profile = black
